--- a/jqUploadify/jqUploadify.csproj
+++ b/jqUploadify/jqUploadify.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="gitCheatSheet.txt" />
+    <Content Include="HtmlPage1.html" />
     <Content Include="images\BeginUpload.gif" />
     <Content Include="images\CancelUpload.gif" />
     <Content Include="images\SelectUpload.gif" />
